@@ -284,13 +284,6 @@ void gearman_worker_set_log_fn(gearman_worker_st *worker,
   gearman_set_log_fn(worker->gearman, function, context, verbose);
 }
 
-void gearman_worker_set_event_watch_fn(gearman_worker_st *worker,
-                                       gearman_event_watch_fn *function,
-                                       const void *context)
-{
-  gearman_set_event_watch_fn(worker->gearman, function, context);
-}
-
 void gearman_worker_set_workload_malloc_fn(gearman_worker_st *worker,
                                            gearman_malloc_fn *function,
                                            const void *context)
