@@ -222,14 +222,6 @@ void gearman_worker_set_log_fn(gearman_worker_st *worker,
                                gearman_verbose_t verbose);
 
 /**
- * See gearman_set_event_watch_fn() for details.
- */
-GEARMAN_API
-void gearman_worker_set_event_watch_fn(gearman_worker_st *worker,
-                                       gearman_event_watch_fn *function,
-                                       const void *context);
-
-/**
  * See gearman_set_workload_malloc_fn() for details.
  */
 GEARMAN_API
